--- a/package.json
+++ b/package.json
@@ -14,5 +14,17 @@
   "bugs": {
     "url": "https://github.com/Simsso/Interviewer/issues"
   },
-  "homepage": "https://github.com/Simsso/Interviewer#readme"
+  "homepage": "https://github.com/Simsso/Interviewer#readme",
+  "main": "src/index.js",
+  "dependencies": {
+    "dotenv": "^4.0.0",
+    "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "mocha": "^4.1.0"
+  },
+  "scripts": {
+    "start": "node src/index.js",
+    "test": "mocha"
+  }
 }
