--- a/package.json
+++ b/package.json
@@ -15,16 +15,23 @@
     "url": "https://github.com/Simsso/Interviewer/issues"
   },
   "homepage": "https://github.com/Simsso/Interviewer#readme",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "dependencies": {
+    "ajv": "^6.0.1",
+    "basic-auth": "^2.0.0",
+    "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
-    "mocha": "^4.1.0"
+    "mocha": "^4.1.0",
+    "nodemon": "^1.14.11"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "test": "mocha"
+    "start": "node src/server.js",
+    "test": "mocha",
+    "dev": "nodemon src/server.js"
   }
 }
