--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.9.0"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
     "mocha": "^4.1.0",
     "nodemon": "^1.14.11"
   },
