--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "start": "node src/server.js",
-    "test": "mocha",
+    "test": "mocha --recursive",
     "dev": "nodemon src/server.js"
   }
 }
