--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "devDependencies": {
     "assert": "^1.4.1",
     "mocha": "^4.1.0",
-    "nodemon": "^1.14.11"
+    "node-mocks-http": "^1.6.7",
+    "nodemon": "^1.14.11",
+    "sinon": "^4.3.0"
   },
   "scripts": {
     "start": "node src/server.js",
