Login, signup endpoints with lowdb
Implement database interface with lowdb (for dev purposes).

Use Node.js crpto for hashing and password validation.

Increase test coverage.

--- a/.env-sample
+++ b/.env-sample
@@ -9,3 +9,9 @@ DB_PORT=3306
 DB_USER=username
 DB_PASSWORD=secret123!
 DB_NAME=databaseName
+
+# security
+HASH_LENGTH=512
+HASH_ALGORITHM=sha512
+HASH_ITERATIONS=10000
+SALT_LENGTH=128
