--- a/package.json
+++ b/package.json
@@ -23,18 +23,22 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
-    "morgan": "^1.9.0"
+    "lowdb": "^1.0.0",
+    "morgan": "^1.9.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "assert": "^1.4.1",
     "mocha": "^4.1.0",
     "node-mocks-http": "^1.6.7",
     "nodemon": "^1.14.11",
+    "nyc": "^11.4.1",
+    "proxyquire": "^1.8.0",
     "sinon": "^4.3.0"
   },
   "scripts": {
     "start": "node src/server.js",
-    "test": "mocha --recursive",
+    "test": "./node_modules/.bin/nyc --reporter=text mocha --recursive",
     "dev": "nodemon src/server.js"
   }
 }
