Integrate with sequelize

--- a/.env-sample
+++ b/.env-sample
@@ -4,8 +4,8 @@ PORT=3000
 TOKEN_SECRET=2debb2aebdf6a152c38d896e56b8d903d3e326cd
 
 # database
-DB_HOST=db.hostname.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_USER=username
-DB_PASSWORD=secret123!
-DB_NAME=databaseName
+DB_USER=root
+DB_PASSWORD=1234
+DB_NAME=interviewer
