--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "mysql2": "^1.5.3",
+    "sequelize": "^4.37.7",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "assert": "^1.4.1",
